tests/typeapp_perf/typeapp_perf.exp
Error ----------------------------------------------------------------------------------------------------- test3.js:7:2

Cannot cast `x.m()` to empty because string [1] is incompatible with empty [2].

   test3.js:7:2
   7| (x.m(): empty); // error: string ~> empty, number ~> empty
       ^^^^^

References:
   test3.js:6:18
   6| declare var x: C<string> | C<number>;
                       ^^^^^^ [1]
   test3.js:7:9
   7| (x.m(): empty); // error: string ~> empty, number ~> empty
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test3.js:7:2

Cannot cast `x.m()` to empty because number [1] is incompatible with empty [2].

   test3.js:7:2
   7| (x.m(): empty); // error: string ~> empty, number ~> empty
       ^^^^^

References:
   test3.js:6:30
   6| declare var x: C<string> | C<number>;
                                   ^^^^^^ [1]
   test3.js:7:9
   7| (x.m(): empty); // error: string ~> empty, number ~> empty
              ^^^^^ [2]



Found 2 errors
